--- a/src/translations/translation_en.xml
+++ b/src/translations/translation_en.xml
@@ -11,6 +11,8 @@
 	<text name="hud_animalInspector_tooYoung"              text="Below Reproduction Age" />
 	<text name="setting_animalInspector_Visible"           text="HUD Visible" />
 	<text name="toolTip_animalInspector_Visible"           text="When enabled, the overlay is shown" />
+	<text name="setting_animalInspector_TextSize"          text="Font Size" />
+	<text name="toolTip_animalInspector_TextSize"          text="Font Size for display, in relative pixels." />
 	<text name="setting_animalInspector_ShowCount"         text="Show Animal Count" />
 	<text name="toolTip_animalInspector_ShowCount"         text="When enabled, show number of animals and total space for animals " />
 	<text name="setting_animalInspector_ShowFood"          text="Show Food Total" />
